Some GUI updates

--- a/src/firebaseHelloWorld/client/index.html
+++ b/src/firebaseHelloWorld/client/index.html
@@ -15,7 +15,7 @@
             <img id="imgConnecting" src="img/ajax-loader.gif" alt="Connecting" />
         </div>
         <div id="pageMain" class="page">
-            <h1>HEATER STASTUS</h1>
+            <h1>HEATER STATUS</h1>
             <div id="lblStatus"></div>
 
             <h1>CURRENT TEMPERATURE</h1>
@@ -26,11 +26,13 @@
             <div id="slider"></div>
             <!--<input id="txtTargetTemp" type="text">-->
 
+<!--
             <h1>Target time</h1>
             <input id="txtTargetTime" type="text">
 
             <div id="lblRequestStatus"></div>
             <div id="lblRequests"></div>
+            -->
         </div>
     </body>
 </html>
